support multi class paths